--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+
     <!-- MySQL Driver -->
     <dependency>
       <groupId>mysql</groupId>
@@ -48,6 +49,12 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
+
   </dependencies>
 
   <build>
