--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # In order to avoid errors like "Caused by: java.sql.SQLSyntaxErrorException: Table 'test.flight' doesn't exist"
