--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <!-- Flyway -->
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
 
     <!-- MySQL Driver -->
     <dependency>
