--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
       <scope>runtime</scope>
     </dependency>
 
+    <!-- MongoDB -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
+
     <!-- Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
