--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
 
   flyway:
     baseline-on-migrate: true
+
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: test
