--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     properties:
       hibernate:
         format_sql: false
+    mapping-resources: query/hibridDataBaseQueries.xml
 
   flyway:
     baseline-on-migrate: true
